Fixed nav-bar z-index

--- a/styles.css
+++ b/styles.css
@@ -195,7 +195,7 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 2;
+  z-index: 500;
 }
 
 /* Nav bar for larger screens */
